fixed navBar alignment by changing width

--- a/css/index.css
+++ b/css/index.css
@@ -216,6 +216,7 @@ html {
   justify-content: space-around;
   align-items: center;
   position: absolute;
+  width: 72%;
 }
 .navPop {
   cursor: pointer;
