--- a/less/homePage.less
+++ b/less/homePage.less
@@ -48,7 +48,7 @@
 .navBar {
   .display(row, space-around, center);
   position: absolute;
-  
+  width: 72%;
 }
 
 .navPop {
